feat: enhance UI polish, SEO, and error handling
- Center TimeWindowPicker layout with symmetrical button positioning
- Add Share button to About modal
- style TaskManager dropdowns with glass morphism and accessibility (autoFocus)
- Implement ErrorBoundary for graceful failure
- Update SEO metadata and add Open Graph image

--- a/index.html
+++ b/index.html
@@ -1,26 +1,34 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
-    <title>Lovable App</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
 
-    <!-- TODO: Update og:title to match your application name -->
-    <meta property="og:title" content="Lovable App" />
-    <meta property="og:description" content="Lovable Generated Project" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- TODO: Set the document title to the name of your application -->
+  <title>Wacky Calendar | Daily Productivity Scheduler & Time Blocking Tool</title>
+  <meta name="description"
+    content="Generate efficient, mood-boosting daily schedules with Wacky Calendar. A free, aesthetic time-blocking tool that mixes productivity with fun." />
+  <meta name="keywords"
+    content="productivity calendar, daily scheduler, time blocking, efficient schedule, mood tracking, task manager, simple calendar app" />
+  <meta name="author" content="Dylan Cantwell" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="Wacky Calendar | Make Your Schedule Interesting" />
+  <meta property="og:description"
+    content="Break the monotony of routine. Create a fresh, productive, and aesthetically pleasing daily schedule in seconds." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/og-image.svg" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:creator" content="@dylan_cantwell" />
+  <meta name="twitter:title" content="Wacky Calendar | Daily Productivity Scheduler" />
+  <meta name="twitter:description"
+    content="Break the monotony of routine. Create a fresh, productive, and aesthetically pleasing daily schedule in seconds." />
+  <meta name="twitter:image" content="/og-image.svg" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
